[package]
name = "battlesnake"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
futures = "0.3.17"
serde_json = "1.0.64"
structopt = "0.3.23"
serde = { version = "1.0.126", features = ["derive"] }
hyper = { version = "0.14.8", features = ["full"] }
tokio = { version = "1.6.1", features = ["full"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
